// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots AppNavbar default 1`] = `
<div
  className="flex w-screen"
>
  Navigation
</div>
`;

exports[`Storyshots AppTemplate default 1`] = `
<div
  className="container flex flex-col mx-auto space-y-40"
>
  <div
    className="fixed inset-x-0 shadow-lg"
  />
  <footer
    className="bg-white"
  >
    <div
      className="max-w-screen-xl px-4 py-12 mx-auto space-y-8 overflow-hidden sm:px-6 lg:px-8"
    >
      <nav
        className="flex flex-wrap justify-center -mx-5 -my-2"
      >
        <div
          className="px-5 py-2"
        >
          <a
            className="text-base leading-6 text-gray-500 hover:text-gray-900"
            href="#"
          >
            About
          </a>
        </div>
        <div
          className="px-5 py-2"
        >
          <a
            className="text-base leading-6 text-gray-500 hover:text-gray-900"
            href="#"
          >
            Pricing
          </a>
        </div>
        <div
          className="px-5 py-2"
        >
          <a
            className="text-base leading-6 text-gray-500 hover:text-gray-900"
            href="#"
          >
            Contact
          </a>
        </div>
        <div
          className="px-5 py-2"
        >
          <a
            className="text-base leading-6 text-gray-500 hover:text-gray-900"
            href="#"
          >
            Terms
          </a>
        </div>
      </nav>
      <div
        className="flex justify-center mt-8 space-x-6"
      >
        <a
          className="text-gray-400 hover:text-gray-500"
          href="#"
        >
          <span
            className="sr-only"
          >
            Twitter
          </span>
          <svg
            aria-hidden="true"
            className="w-6 h-6"
            fill="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M8.29 20.251c7.547 0 11.675-6.253 11.675-11.675 0-.178 0-.355-.012-.53A8.348 8.348 0 0022 5.92a8.19 8.19 0 01-2.357.646 4.118 4.118 0 001.804-2.27 8.224 8.224 0 01-2.605.996 4.107 4.107 0 00-6.993 3.743 11.65 11.65 0 01-8.457-4.287 4.106 4.106 0 001.27 5.477A4.072 4.072 0 012.8 9.713v.052a4.105 4.105 0 003.292 4.022 4.095 4.095 0 01-1.853.07 4.108 4.108 0 003.834 2.85A8.233 8.233 0 012 18.407a11.616 11.616 0 006.29 1.84"
            />
          </svg>
        </a>
        <a
          className="text-gray-400 hover:text-gray-500"
          href="#"
        >
          <span
            className="sr-only"
          >
            GitHub
          </span>
          <svg
            aria-hidden="true"
            className="w-6 h-6"
            fill="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              clipRule="evenodd"
              d="M12 2C6.477 2 2 6.484 2 12.017c0 4.425 2.865 8.18 6.839 9.504.5.092.682-.217.682-.483 0-.237-.008-.868-.013-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.029-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0112 6.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.379.202 2.398.1 2.651.64.7 1.028 1.595 1.028 2.688 0 3.848-2.339 4.695-4.566 4.943.359.309.678.92.678 1.855 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.019 10.019 0 0022 12.017C22 6.484 17.522 2 12 2z"
              fillRule="evenodd"
            />
          </svg>
        </a>
      </div>
      <p
        className="mt-8 text-base leading-6 text-center text-gray-400"
      >
        © 
        2021
         Andreas Thomas. All rights reserved.
      </p>
    </div>
  </footer>
</div>
`;

exports[`Storyshots Features default 1`] = `
<div
  className="grid grid-cols-1 gap-16 px-4 md:grid-cols-2 lg:grid-cols-3"
/>
`;

exports[`Storyshots Footer default 1`] = `
<footer
  className="bg-white"
>
  <div
    className="max-w-screen-xl px-4 py-12 mx-auto space-y-8 overflow-hidden sm:px-6 lg:px-8"
  >
    <nav
      className="flex flex-wrap justify-center -mx-5 -my-2"
    >
      <div
        className="px-5 py-2"
      >
        <a
          className="text-base leading-6 text-gray-500 hover:text-gray-900"
          href="#"
        >
          About
        </a>
      </div>
      <div
        className="px-5 py-2"
      >
        <a
          className="text-base leading-6 text-gray-500 hover:text-gray-900"
          href="#"
        >
          Pricing
        </a>
      </div>
      <div
        className="px-5 py-2"
      >
        <a
          className="text-base leading-6 text-gray-500 hover:text-gray-900"
          href="#"
        >
          Contact
        </a>
      </div>
      <div
        className="px-5 py-2"
      >
        <a
          className="text-base leading-6 text-gray-500 hover:text-gray-900"
          href="#"
        >
          Terms
        </a>
      </div>
    </nav>
    <div
      className="flex justify-center mt-8 space-x-6"
    >
      <a
        className="text-gray-400 hover:text-gray-500"
        href="#"
      >
        <span
          className="sr-only"
        >
          Twitter
        </span>
        <svg
          aria-hidden="true"
          className="w-6 h-6"
          fill="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M8.29 20.251c7.547 0 11.675-6.253 11.675-11.675 0-.178 0-.355-.012-.53A8.348 8.348 0 0022 5.92a8.19 8.19 0 01-2.357.646 4.118 4.118 0 001.804-2.27 8.224 8.224 0 01-2.605.996 4.107 4.107 0 00-6.993 3.743 11.65 11.65 0 01-8.457-4.287 4.106 4.106 0 001.27 5.477A4.072 4.072 0 012.8 9.713v.052a4.105 4.105 0 003.292 4.022 4.095 4.095 0 01-1.853.07 4.108 4.108 0 003.834 2.85A8.233 8.233 0 012 18.407a11.616 11.616 0 006.29 1.84"
          />
        </svg>
      </a>
      <a
        className="text-gray-400 hover:text-gray-500"
        href="#"
      >
        <span
          className="sr-only"
        >
          GitHub
        </span>
        <svg
          aria-hidden="true"
          className="w-6 h-6"
          fill="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            clipRule="evenodd"
            d="M12 2C6.477 2 2 6.484 2 12.017c0 4.425 2.865 8.18 6.839 9.504.5.092.682-.217.682-.483 0-.237-.008-.868-.013-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.029-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0112 6.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.379.202 2.398.1 2.651.64.7 1.028 1.595 1.028 2.688 0 3.848-2.339 4.695-4.566 4.943.359.309.678.92.678 1.855 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.019 10.019 0 0022 12.017C22 6.484 17.522 2 12 2z"
            fillRule="evenodd"
          />
        </svg>
      </a>
    </div>
    <p
      className="mt-8 text-base leading-6 text-center text-gray-400"
    >
      © 
      2021
       Andreas Thomas. All rights reserved.
    </p>
  </div>
</footer>
`;

exports[`Storyshots LandingPageTemplate default 1`] = `
<div
  className="container flex flex-col mx-auto space-y-40"
>
  <div
    className="fixed inset-x-0 "
  >
    <nav
      className="w-screen px-8 bg-white"
    >
      <div
        className="relative flex flex-col flex-wrap items-center justify-between py-5 mx-auto md:flex-row max-w-7xl"
      >
        <div
          className="absolute inset-y-0 left-0 flex items-center sm:hidden"
        >
          <button
            aria-controls="mobile-menu"
            aria-expanded="false"
            className="inline-flex items-center justify-center p-2 text-gray-400 rounded-md hover:text-white bg-gradient-to-tr hover:from-blue-700 hover:to-lightBlue-500 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white"
            onClick={[Function]}
            type="button"
          >
            <span
              className="sr-only"
            >
              Open main menu
            </span>
            <svg
              className="block w-6 h-6"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M4 6h16M4 12h16M4 18h16"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth={2}
              />
            </svg>
            <svg
              className="hidden w-6 h-6"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 18L18 6M6 6l12 12"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth={2}
              />
            </svg>
          </button>
        </div>
        <a
          href="/"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <span
            className="text-2xl font-extrabold text-transparent bg-clip-text bg-gradient-to-tr from-blue-700 to-lightBlue-600"
          >
            Mercury
          </span>
        </a>
        <div
          className="items-center justify-center hidden w-full h-full py-5 -ml-0 space-x-12 text-base md:flex md:-ml-5 md:py-0 md:absolute"
        >
          <a
            className="relative font-medium leading-6 text-gray-600 transition duration-150 ease-out hover:text-gray-900"
            href="/#"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Home
          </a>
          <a
            className="relative font-medium leading-6 text-gray-600 transition duration-150 ease-out hover:text-gray-900"
            href="/#"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Features
          </a>
          <a
            className="relative font-medium leading-6 text-gray-600 transition duration-150 ease-out hover:text-gray-900"
            href="/#"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Pricing
          </a>
        </div>
        <div
          className="relative z-10 items-center hidden space-x-3 md:inline-flex md:ml-5 lg:justify-end"
        >
          <a
            className="inline-flex items-center justify-center px-4 py-2 text-base font-medium leading-6 text-gray-600 whitespace-no-wrap "
            href="/auth/signin"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Sign in
          </a>
          <span
            className="inline-flex rounded-md shadow-sm"
          >
            <a
              className="inline-flex items-center justify-center px-4 py-2 text-base font-medium leading-6 text-white whitespace-no-wrap rounded shadow-sm bg-gradient-to-tr from-blue-700 to-lightBlue-500 shadow-blue-400 hover:bg-blue-800 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-600"
              href="/auth/signin"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Start free trial
            </a>
          </span>
        </div>
      </div>
    </nav>
  </div>
  <div
    className="px-4"
  />
  <footer
    className="bg-white"
  >
    <div
      className="max-w-screen-xl px-4 py-12 mx-auto space-y-8 overflow-hidden sm:px-6 lg:px-8"
    >
      <nav
        className="flex flex-wrap justify-center -mx-5 -my-2"
      >
        <div
          className="px-5 py-2"
        >
          <a
            className="text-base leading-6 text-gray-500 hover:text-gray-900"
            href="#"
          >
            About
          </a>
        </div>
        <div
          className="px-5 py-2"
        >
          <a
            className="text-base leading-6 text-gray-500 hover:text-gray-900"
            href="#"
          >
            Pricing
          </a>
        </div>
        <div
          className="px-5 py-2"
        >
          <a
            className="text-base leading-6 text-gray-500 hover:text-gray-900"
            href="#"
          >
            Contact
          </a>
        </div>
        <div
          className="px-5 py-2"
        >
          <a
            className="text-base leading-6 text-gray-500 hover:text-gray-900"
            href="#"
          >
            Terms
          </a>
        </div>
      </nav>
      <div
        className="flex justify-center mt-8 space-x-6"
      >
        <a
          className="text-gray-400 hover:text-gray-500"
          href="#"
        >
          <span
            className="sr-only"
          >
            Twitter
          </span>
          <svg
            aria-hidden="true"
            className="w-6 h-6"
            fill="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M8.29 20.251c7.547 0 11.675-6.253 11.675-11.675 0-.178 0-.355-.012-.53A8.348 8.348 0 0022 5.92a8.19 8.19 0 01-2.357.646 4.118 4.118 0 001.804-2.27 8.224 8.224 0 01-2.605.996 4.107 4.107 0 00-6.993 3.743 11.65 11.65 0 01-8.457-4.287 4.106 4.106 0 001.27 5.477A4.072 4.072 0 012.8 9.713v.052a4.105 4.105 0 003.292 4.022 4.095 4.095 0 01-1.853.07 4.108 4.108 0 003.834 2.85A8.233 8.233 0 012 18.407a11.616 11.616 0 006.29 1.84"
            />
          </svg>
        </a>
        <a
          className="text-gray-400 hover:text-gray-500"
          href="#"
        >
          <span
            className="sr-only"
          >
            GitHub
          </span>
          <svg
            aria-hidden="true"
            className="w-6 h-6"
            fill="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              clipRule="evenodd"
              d="M12 2C6.477 2 2 6.484 2 12.017c0 4.425 2.865 8.18 6.839 9.504.5.092.682-.217.682-.483 0-.237-.008-.868-.013-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.029-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0112 6.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.379.202 2.398.1 2.651.64.7 1.028 1.595 1.028 2.688 0 3.848-2.339 4.695-4.566 4.943.359.309.678.92.678 1.855 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.019 10.019 0 0022 12.017C22 6.484 17.522 2 12 2z"
              fillRule="evenodd"
            />
          </svg>
        </a>
      </div>
      <p
        className="mt-8 text-base leading-6 text-center text-gray-400"
      >
        © 
        2021
         Andreas Thomas. All rights reserved.
      </p>
    </div>
  </footer>
</div>
`;

exports[`Storyshots SigninForm default 1`] = `
<div>
  <form
    className="relative w-full mt-10 space-y-8"
  >
    <div>
      <input
        className="block w-full px-4 py-3 border-2 border-gray-200 rounded focus:border-transparent focus:ring focus:ring-blue-700 focus:outline-none"
        name="email"
        placeholder="Your Email"
        type="email"
      />
      <span
        className="text-sm text-red-700"
      />
    </div>
    <div>
      <input
        className="block w-full px-4 py-3 border-2 border-gray-200 rounded focus:border-transparent focus:ring focus:ring-blue-700 focus:outline-none"
        name="password"
        placeholder="Your Password"
        type="password"
      />
      <span
        className="text-sm text-red-700"
      />
    </div>
    <button
      className="inline-flex hover:shadow-glow justify-center w-full px-4 py-3 mt-8 font-sans text-sm leading-none text-center no-underline bg-transparent border border-blue-500 rounded cursor-pointer hover:border-0 bg-gradient-to-tr  focus-within:bg-blue-800 focus-within:border-blue-800 focus-within:text-white sm:text-base md:text-lg   from-blue-700 to-lightBlue-500 text-white "
      onClick={[Function]}
    >
      Sign in
    </button>
  </form>
  <p
    className="w-full mt-4 text-sm text-center text-gray-500"
  >
    Don't have an account yet? Create one in the form above.
  </p>
</div>
`;

exports[`Storyshots Spinner default 1`] = `
<span
  className="flex items-center justify-center w-full h-full"
>
  <svg
    className="w-6 h-6 text-white animate-spin"
    fill="none"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      className="opacity-25"
      cx="12"
      cy="12"
      r="10"
      stroke="currentColor"
      strokeWidth="4"
    />
    <path
      className="opacity-75"
      d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"
      fill="currentColor"
    />
  </svg>
</span>
`;

exports[`Storyshots atoms/Box default 1`] = `
<div
  className="p-8 bg-white rounded shadow-2xl"
>
  <div>
    <div
      className="p-4"
    >
      Something inside
    </div>
  </div>
</div>
`;

exports[`Storyshots atoms/Input email 1`] = `
<input
  className="block w-full px-4 py-3 border-2 border-gray-200 rounded focus:border-transparent focus:ring focus:ring-blue-700 focus:outline-none"
  name="email"
  placeholder="your@email.com"
  type="email"
/>
`;

exports[`Storyshots atoms/Input password 1`] = `
<input
  className="block w-full px-4 py-3 border-2 border-gray-200 rounded focus:border-transparent focus:ring focus:ring-blue-700 focus:outline-none"
  name="password"
  placeholder="placeholder"
  type="password"
/>
`;

exports[`Storyshots atoms/Input text 1`] = `
<input
  className="block w-full px-4 py-3 border-2 border-gray-200 rounded focus:border-transparent focus:ring focus:ring-blue-700 focus:outline-none"
  name="text"
  placeholder="placeholder"
  type="text"
/>
`;

exports[`Storyshots atoms/Logo default 1`] = `
<span
  className="text-2xl font-extrabold text-transparent bg-clip-text bg-gradient-to-tr from-blue-700 to-lightBlue-600"
>
  Mercury
</span>
`;

exports[`Storyshots atoms/button/Primary default 1`] = `
<a
  className="inline-flex hover:shadow-glow justify-center w-full px-4 py-3 mt-8 font-sans text-sm leading-none text-center no-underline bg-transparent border border-blue-500 rounded cursor-pointer hover:border-0 bg-gradient-to-tr  focus-within:bg-blue-800 focus-within:border-blue-800 focus-within:text-white sm:text-base md:text-lg  hover:from-blue-700 hover:to-lightBlue-500 hover:text-white text-blue-800 "
  href="/#"
  onClick={[Function]}
  onMouseEnter={[Function]}
>
  Label
</a>
`;

exports[`Storyshots atoms/button/Primary highlighted 1`] = `
<a
  className="inline-flex hover:shadow-glow justify-center w-full px-4 py-3 mt-8 font-sans text-sm leading-none text-center no-underline bg-transparent border border-blue-500 rounded cursor-pointer hover:border-0 bg-gradient-to-tr  focus-within:bg-blue-800 focus-within:border-blue-800 focus-within:text-white sm:text-base md:text-lg   from-blue-700 to-lightBlue-500 text-white "
  href="/#"
  onClick={[Function]}
  onMouseEnter={[Function]}
>
  Label
</a>
`;

exports[`Storyshots molecules/Feature default 1`] = `
<div
  className="p-8 bg-white rounded shadow-2xl"
>
  <div
    className="flex flex-col items-center"
  >
    <div
      className="-mt-16"
    >
      <div
        className="w-16 h-16 p-2 rounded shadow-xl bg-gradient-to-tr from-blue-700 to-lightBlue-500"
      >
        <span
          className="text-white"
        >
          <svg
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 15v2m-6 4h12a2 2 0 002-2v-6a2 2 0 00-2-2H6a2 2 0 00-2 2v6a2 2 0 002 2zm10-10V7a4 4 0 00-8 0v4h8z"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth={2}
            />
          </svg>
        </span>
      </div>
    </div>
    <h2
      className="mt-6 text-2xl font-medium text-black"
    >
      SSL Certificates
    </h2>
    <p
      className="mt-6 text-gray-600"
    >
      Ac tincidunt sapnie vehicula erat aucotr pellentesque rhoncus. Et magna sit morbi labortis.
    </p>
  </div>
</div>
`;

exports[`Storyshots molecules/Price Free 1`] = `
<div
  className="flex flex-col items-center max-w-md p-4 mx-auto my-0 sm:p-6 md:px-8 md:py-12"
>
  <h3
    className="m-0 text-2xl font-semibold leading-tight tracking-tight text-black border-0 border-gray-200 sm:text-3xl md:text-4xl"
  >
    Try it for free
  </h3>
  <div
    className="flex items-end mt-6 leading-7 text-gray-900 border-0 border-gray-200"
  >
    <div
      className="flex items-end mt-6 leading-7 text-gray-900 border-0 border-gray-200"
    >
      <p
        className="m-0 text-6xl font-semibold leading-none border-solid "
      >
        Free
      </p>
    </div>
  </div>
  <p
    className="mt-6 mb-5 text-base leading-normal text-left text-gray-900 border-0 border-gray-200"
  >
    Probably still better than other managers
  </p>
  <ul
    className="flex-1 p-0 mt-4 ml-5 leading-7 text-gray-900 border-0 border-gray-200"
  >
    <li
      className="inline-flex items-center w-full mb-2 ml-5 font-semibold text-left border-solid"
    >
      <span
        className="w-6 h-6 text-blue-600"
      >
        <svg
          fill="currentColor"
          viewBox="0 0 20 20"
        >
          <path
            clipRule="evenodd"
            d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
            fillRule="evenodd"
          />
        </svg>
      </span>
      <span
        className="ml-2"
      >
        Unlimited items
      </span>
    </li>
    <li
      className="inline-flex items-center w-full mb-2 ml-5 font-semibold text-left border-solid"
    >
      <span
        className="w-6 h-6 text-blue-600"
      >
        <svg
          fill="currentColor"
          viewBox="0 0 20 20"
        >
          <path
            clipRule="evenodd"
            d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
            fillRule="evenodd"
          />
        </svg>
      </span>
      <span
        className="ml-2"
      >
        2 Lists
      </span>
    </li>
    <li
      className="inline-flex items-center w-full mb-2 ml-5 font-semibold text-left border-solid"
    >
      <span
        className="w-6 h-6 text-blue-600"
      >
        <svg
          fill="currentColor"
          viewBox="0 0 20 20"
        >
          <path
            clipRule="evenodd"
            d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
            fillRule="evenodd"
          />
        </svg>
      </span>
      <span
        className="ml-2"
      >
        Something else
      </span>
    </li>
  </ul>
  <a
    className="inline-flex hover:shadow-glow justify-center w-full px-4 py-3 mt-8 font-sans text-sm leading-none text-center no-underline bg-transparent border border-blue-500 rounded cursor-pointer hover:border-0 bg-gradient-to-tr  focus-within:bg-blue-800 focus-within:border-blue-800 focus-within:text-white sm:text-base md:text-lg  hover:from-blue-700 hover:to-lightBlue-500 hover:text-white text-blue-800 "
    href="/#"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    Choose plan
  </a>
</div>
`;

exports[`Storyshots molecules/Price Premium 1`] = `
<div
  className="flex flex-col items-center max-w-md p-4 mx-auto my-0 sm:p-6 md:px-8 md:py-12"
>
  <h3
    className="m-0 text-2xl font-semibold leading-tight tracking-tight text-black border-0 border-gray-200 sm:text-3xl md:text-4xl"
  >
    Premium
  </h3>
  <div
    className="flex items-end mt-6 leading-7 text-gray-900 border-0 border-gray-200"
  >
    <div
      className="flex items-end mt-6 leading-7 text-gray-900 border-0 border-gray-200"
    >
      <p
        className="m-0 text-6xl font-semibold leading-none border-solid "
      >
        $2
      </p>
      <p
        className="m-0 border-solid "
      >
        / 
        month
      </p>
    </div>
  </div>
  <p
    className="mt-6 mb-5 text-base leading-normal text-left text-gray-900 border-0 border-gray-200"
  >
    Cool pricing
  </p>
  <ul
    className="flex-1 p-0 mt-4 ml-5 leading-7 text-gray-900 border-0 border-gray-200"
  >
    <li
      className="inline-flex items-center w-full mb-2 ml-5 font-semibold text-left border-solid"
    >
      <span
        className="w-6 h-6 text-blue-600"
      >
        <svg
          fill="currentColor"
          viewBox="0 0 20 20"
        >
          <path
            clipRule="evenodd"
            d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
            fillRule="evenodd"
          />
        </svg>
      </span>
      <span
        className="ml-2"
      >
        Share lists with anyone
      </span>
    </li>
    <li
      className="inline-flex items-center w-full mb-2 ml-5 font-semibold text-left border-solid"
    >
      <span
        className="w-6 h-6 text-blue-600"
      >
        <svg
          fill="currentColor"
          viewBox="0 0 20 20"
        >
          <path
            clipRule="evenodd"
            d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
            fillRule="evenodd"
          />
        </svg>
      </span>
      <span
        className="ml-2"
      >
        Import from recipes
      </span>
    </li>
    <li
      className="inline-flex items-center w-full mb-2 ml-5 font-semibold text-left border-solid"
    >
      <span
        className="w-6 h-6 text-blue-600"
      >
        <svg
          fill="currentColor"
          viewBox="0 0 20 20"
        >
          <path
            clipRule="evenodd"
            d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
            fillRule="evenodd"
          />
        </svg>
      </span>
      <span
        className="ml-2"
      >
        Premium Support
      </span>
    </li>
  </ul>
  <a
    className="inline-flex hover:shadow-glow justify-center w-full px-4 py-3 mt-8 font-sans text-sm leading-none text-center no-underline bg-transparent border border-blue-500 rounded cursor-pointer hover:border-0 bg-gradient-to-tr  focus-within:bg-blue-800 focus-within:border-blue-800 focus-within:text-white sm:text-base md:text-lg   from-blue-700 to-lightBlue-500 text-white "
    href="/#"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    Choose plan
  </a>
</div>
`;

exports[`Storyshots molecules/SimpleForm signin 1`] = `
<form
  className="relative w-full mt-10 space-y-8"
>
  <div>
    <input
      className="block w-full px-4 py-3 border-2 border-gray-200 rounded focus:border-transparent focus:ring focus:ring-blue-700 focus:outline-none"
      name="email"
      placeholder="Your Email"
      type="email"
    />
    <span
      className="text-sm text-red-700"
    />
  </div>
  <div>
    <input
      className="block w-full px-4 py-3 border-2 border-gray-200 rounded focus:border-transparent focus:ring focus:ring-blue-700 focus:outline-none"
      name="password"
      placeholder="Your Password"
      type="password"
    />
    <span
      className="text-sm text-red-700"
    />
  </div>
  <button
    className="inline-flex hover:shadow-glow justify-center w-full px-4 py-3 mt-8 font-sans text-sm leading-none text-center no-underline bg-transparent border border-blue-500 rounded cursor-pointer hover:border-0 bg-gradient-to-tr  focus-within:bg-blue-800 focus-within:border-blue-800 focus-within:text-white sm:text-base md:text-lg   from-blue-700 to-lightBlue-500 text-white "
    onClick={[Function]}
  >
    Submit
  </button>
</form>
`;

exports[`Storyshots organisms/Hero default 1`] = `
<div
  className="max-w-5xl px-4 mx-auto"
>
  <div
    className="flex flex-col items-center md:flex-row"
  >
    <div
      className="w-full space-y-5 md:w-3/5 md:pr-16"
    >
      <h2
        className="text-2xl font-extrabold leading-none text-black sm:text-3xl md:text-5xl"
      >
        All your shopping lists in one place
      </h2>
      <p
        className="text-xl text-gray-600 md:pr-16"
      >
        Share your shopping lists with your partner and never forget anything
      </p>
    </div>
    <div
      className="w-full mt-16 md:mt-0 md:w-2/5"
    >
      <div
        className="p-8 bg-white rounded shadow-2xl"
      >
        <div />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots organisms/Navbar default 1`] = `
<nav
  className="w-screen px-8 bg-white"
>
  <div
    className="relative flex flex-col flex-wrap items-center justify-between py-5 mx-auto md:flex-row max-w-7xl"
  >
    <div
      className="absolute inset-y-0 left-0 flex items-center sm:hidden"
    >
      <button
        aria-controls="mobile-menu"
        aria-expanded="false"
        className="inline-flex items-center justify-center p-2 text-gray-400 rounded-md hover:text-white bg-gradient-to-tr hover:from-blue-700 hover:to-lightBlue-500 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white"
        onClick={[Function]}
        type="button"
      >
        <span
          className="sr-only"
        >
          Open main menu
        </span>
        <svg
          className="block w-6 h-6"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M4 6h16M4 12h16M4 18h16"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth={2}
          />
        </svg>
        <svg
          className="hidden w-6 h-6"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M6 18L18 6M6 6l12 12"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth={2}
          />
        </svg>
      </button>
    </div>
    <a
      href="/"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <span
        className="text-2xl font-extrabold text-transparent bg-clip-text bg-gradient-to-tr from-blue-700 to-lightBlue-600"
      >
        Mercury
      </span>
    </a>
    <div
      className="items-center justify-center hidden w-full h-full py-5 -ml-0 space-x-12 text-base md:flex md:-ml-5 md:py-0 md:absolute"
    >
      <a
        className="relative font-medium leading-6 text-gray-600 transition duration-150 ease-out hover:text-gray-900"
        href="/#"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Home
      </a>
      <a
        className="relative font-medium leading-6 text-gray-600 transition duration-150 ease-out hover:text-gray-900"
        href="/#"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Features
      </a>
      <a
        className="relative font-medium leading-6 text-gray-600 transition duration-150 ease-out hover:text-gray-900"
        href="/#"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Pricing
      </a>
    </div>
    <div
      className="relative z-10 items-center hidden space-x-3 md:inline-flex md:ml-5 lg:justify-end"
    >
      <a
        className="inline-flex items-center justify-center px-4 py-2 text-base font-medium leading-6 text-gray-600 whitespace-no-wrap "
        href="/auth/signin"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Sign in
      </a>
      <span
        className="inline-flex rounded-md shadow-sm"
      >
        <a
          className="inline-flex items-center justify-center px-4 py-2 text-base font-medium leading-6 text-white whitespace-no-wrap rounded shadow-sm bg-gradient-to-tr from-blue-700 to-lightBlue-500 shadow-blue-400 hover:bg-blue-800 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-600"
          href="/auth/signin"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Start free trial
        </a>
      </span>
    </div>
  </div>
</nav>
`;

exports[`Storyshots organisms/Navbar with user 1`] = `
<nav
  className="w-screen px-8 bg-white"
>
  <div
    className="relative flex flex-col flex-wrap items-center justify-between py-5 mx-auto md:flex-row max-w-7xl"
  >
    <div
      className="absolute inset-y-0 left-0 flex items-center sm:hidden"
    >
      <button
        aria-controls="mobile-menu"
        aria-expanded="false"
        className="inline-flex items-center justify-center p-2 text-gray-400 rounded-md hover:text-white bg-gradient-to-tr hover:from-blue-700 hover:to-lightBlue-500 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white"
        onClick={[Function]}
        type="button"
      >
        <span
          className="sr-only"
        >
          Open main menu
        </span>
        <svg
          className="block w-6 h-6"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M4 6h16M4 12h16M4 18h16"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth={2}
          />
        </svg>
        <svg
          className="hidden w-6 h-6"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M6 18L18 6M6 6l12 12"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth={2}
          />
        </svg>
      </button>
    </div>
    <a
      href="/"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <span
        className="text-2xl font-extrabold text-transparent bg-clip-text bg-gradient-to-tr from-blue-700 to-lightBlue-600"
      >
        Mercury
      </span>
    </a>
    <div
      className="items-center justify-center hidden w-full h-full py-5 -ml-0 space-x-12 text-base md:flex md:-ml-5 md:py-0 md:absolute"
    >
      <a
        className="relative font-medium leading-6 text-gray-600 transition duration-150 ease-out hover:text-gray-900"
        href="/#"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Home
      </a>
      <a
        className="relative font-medium leading-6 text-gray-600 transition duration-150 ease-out hover:text-gray-900"
        href="/#"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Features
      </a>
      <a
        className="relative font-medium leading-6 text-gray-600 transition duration-150 ease-out hover:text-gray-900"
        href="/#"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Pricing
      </a>
    </div>
    <div
      className="relative z-10 items-center hidden space-x-3 md:inline-flex md:ml-5 lg:justify-end"
    >
      <a
        className="inline-flex items-center justify-center px-4 py-2 text-base font-medium leading-6 text-gray-600 whitespace-no-wrap "
        href="/api/auth/signout"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Sign out
      </a>
    </div>
  </div>
</nav>
`;

exports[`Storyshots organisms/Pricing default 1`] = `
<div
  className="box-border px-4 mx-auto border-solid sm:px-6 md:px-6 lg:px-8 max-w-7xl"
>
  <div
    className="flex flex-col items-center leading-7 text-center text-gray-900 border-0 border-gray-200"
  >
    <h2
      className="box-border m-0 text-3xl font-semibold leading-tight tracking-tight text-black border-solid sm:text-4xl md:text-5xl"
    >
      Simple, Transparent Pricing
    </h2>
    <p
      className="box-border mt-2 text-xl text-gray-900 border-solid sm:text-2xl"
    />
  </div>
  <div
    className="flex flex-col mt-4 space-y-8 leading-7 text-gray-900 border-0 border-gray-200 md:space-x-16 md:space-y-0 md:flex-row sm:mt-6 md:mt-8 "
  >
    <div
      className="p-8 bg-white rounded shadow-2xl"
    >
      <div>
        <div
          className="flex flex-col items-center max-w-md p-4 mx-auto my-0 sm:p-6 md:px-8 md:py-12"
        >
          <h3
            className="m-0 text-2xl font-semibold leading-tight tracking-tight text-black border-0 border-gray-200 sm:text-3xl md:text-4xl"
          >
            Try it for free
          </h3>
          <div
            className="flex items-end mt-6 leading-7 text-gray-900 border-0 border-gray-200"
          >
            <div
              className="flex items-end mt-6 leading-7 text-gray-900 border-0 border-gray-200"
            >
              <p
                className="m-0 text-6xl font-semibold leading-none border-solid "
              >
                Free
              </p>
            </div>
          </div>
          <p
            className="mt-6 mb-5 text-base leading-normal text-left text-gray-900 border-0 border-gray-200"
          >
            Probably still better than other managers
          </p>
          <ul
            className="flex-1 p-0 mt-4 ml-5 leading-7 text-gray-900 border-0 border-gray-200"
          >
            <li
              className="inline-flex items-center w-full mb-2 ml-5 font-semibold text-left border-solid"
            >
              <span
                className="w-6 h-6 text-blue-600"
              >
                <svg
                  fill="currentColor"
                  viewBox="0 0 20 20"
                >
                  <path
                    clipRule="evenodd"
                    d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
                    fillRule="evenodd"
                  />
                </svg>
              </span>
              <span
                className="ml-2"
              >
                Unlimited items
              </span>
            </li>
            <li
              className="inline-flex items-center w-full mb-2 ml-5 font-semibold text-left border-solid"
            >
              <span
                className="w-6 h-6 text-blue-600"
              >
                <svg
                  fill="currentColor"
                  viewBox="0 0 20 20"
                >
                  <path
                    clipRule="evenodd"
                    d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
                    fillRule="evenodd"
                  />
                </svg>
              </span>
              <span
                className="ml-2"
              >
                2 Lists
              </span>
            </li>
            <li
              className="inline-flex items-center w-full mb-2 ml-5 font-semibold text-left border-solid"
            >
              <span
                className="w-6 h-6 text-blue-600"
              >
                <svg
                  fill="currentColor"
                  viewBox="0 0 20 20"
                >
                  <path
                    clipRule="evenodd"
                    d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
                    fillRule="evenodd"
                  />
                </svg>
              </span>
              <span
                className="ml-2"
              >
                Something else
              </span>
            </li>
          </ul>
          <a
            className="inline-flex hover:shadow-glow justify-center w-full px-4 py-3 mt-8 font-sans text-sm leading-none text-center no-underline bg-transparent border border-blue-500 rounded cursor-pointer hover:border-0 bg-gradient-to-tr  focus-within:bg-blue-800 focus-within:border-blue-800 focus-within:text-white sm:text-base md:text-lg  hover:from-blue-700 hover:to-lightBlue-500 hover:text-white text-blue-800 "
            href="/#"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Choose plan
          </a>
        </div>
      </div>
    </div>
    <div
      className="p-8 bg-white rounded shadow-2xl"
    >
      <div>
        <div
          className="flex flex-col items-center max-w-md p-4 mx-auto my-0 sm:p-6 md:px-8 md:py-12"
        >
          <h3
            className="m-0 text-2xl font-semibold leading-tight tracking-tight text-black border-0 border-gray-200 sm:text-3xl md:text-4xl"
          >
            Premium
          </h3>
          <div
            className="flex items-end mt-6 leading-7 text-gray-900 border-0 border-gray-200"
          >
            <div
              className="flex items-end mt-6 leading-7 text-gray-900 border-0 border-gray-200"
            >
              <p
                className="m-0 text-6xl font-semibold leading-none border-solid "
              >
                $2
              </p>
              <p
                className="m-0 border-solid "
              >
                / 
                month
              </p>
            </div>
          </div>
          <p
            className="mt-6 mb-5 text-base leading-normal text-left text-gray-900 border-0 border-gray-200"
          >
            Cool pricing
          </p>
          <ul
            className="flex-1 p-0 mt-4 ml-5 leading-7 text-gray-900 border-0 border-gray-200"
          >
            <li
              className="inline-flex items-center w-full mb-2 ml-5 font-semibold text-left border-solid"
            >
              <span
                className="w-6 h-6 text-blue-600"
              >
                <svg
                  fill="currentColor"
                  viewBox="0 0 20 20"
                >
                  <path
                    clipRule="evenodd"
                    d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
                    fillRule="evenodd"
                  />
                </svg>
              </span>
              <span
                className="ml-2"
              >
                Share lists with anyone
              </span>
            </li>
            <li
              className="inline-flex items-center w-full mb-2 ml-5 font-semibold text-left border-solid"
            >
              <span
                className="w-6 h-6 text-blue-600"
              >
                <svg
                  fill="currentColor"
                  viewBox="0 0 20 20"
                >
                  <path
                    clipRule="evenodd"
                    d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
                    fillRule="evenodd"
                  />
                </svg>
              </span>
              <span
                className="ml-2"
              >
                Import from recipes
              </span>
            </li>
            <li
              className="inline-flex items-center w-full mb-2 ml-5 font-semibold text-left border-solid"
            >
              <span
                className="w-6 h-6 text-blue-600"
              >
                <svg
                  fill="currentColor"
                  viewBox="0 0 20 20"
                >
                  <path
                    clipRule="evenodd"
                    d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
                    fillRule="evenodd"
                  />
                </svg>
              </span>
              <span
                className="ml-2"
              >
                Premium Support
              </span>
            </li>
          </ul>
          <a
            className="inline-flex hover:shadow-glow justify-center w-full px-4 py-3 mt-8 font-sans text-sm leading-none text-center no-underline bg-transparent border border-blue-500 rounded cursor-pointer hover:border-0 bg-gradient-to-tr  focus-within:bg-blue-800 focus-within:border-blue-800 focus-within:text-white sm:text-base md:text-lg   from-blue-700 to-lightBlue-500 text-white "
            href="/#"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Choose plan
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;
